adjusts styling of shipment type label to account for the 10 character shipment ID and ensures that the IDs are aligned when the labels have differing character counts

--- a/src/components/Customer/Home/ShipmentList/ShipmentList.module.scss
+++ b/src/components/Customer/Home/ShipmentList/ShipmentList.module.scss
@@ -14,8 +14,8 @@
   @include u-margin-bottom(1);
 
   strong {
-    @include u-padding-right(1);
     white-space: nowrap;
+    @include u-minw(8);
   }
 
   &:last-child {
@@ -27,11 +27,10 @@
   fill: $primary;
 }
 
-.shipment-code{
+.shipment-code {
   font-size: 13px;
   font-weight: normal;
   word-wrap: anywhere;
-  @include u-padding-x(1);
 }
 
 .shipment-list-item-PPM {
